--- a/first/templates/customer_login.html
+++ b/first/templates/customer_login.html
@@ -51,7 +51,6 @@
         <h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
         <nav id="nav">
             <ul>
-
                 <li><a href="{% url 'list' %}">모든상품</a></li>
                 <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
                 <li><a href="{% url 'recommend' %}">추천여행지</a></li>
@@ -59,7 +58,11 @@
                 <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+                {% if user.is_writer%}
+                <li><a href="{% url 'upload' user.id %}">상품등록</a></li>
+                {% else %}
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+                {% endif %}
                 <li>
                     <a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form style="height: 100px;" id="logout" method="POST" action="{% url 'signout' %}">
@@ -67,11 +70,9 @@
                     </form>
                 </li>
                 {% endif %}
-                <li><a href="{% url 'upload' %}">상품등록</a></li>
             </ul>
         </nav>
     </header>
-
 
 
     <div style="margin-top: 4em;">
