--- a/first/templates/enroll.html
+++ b/first/templates/enroll.html
@@ -47,7 +47,6 @@
         <h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
         <nav id="nav">
             <ul>
-
                 <li><a href="{% url 'list' %}">모든상품</a></li>
                 <li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
                 <li><a href="{% url 'recommend' %}">추천여행지</a></li>
@@ -55,7 +54,11 @@
                 <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
                 {% else %}
                 <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+                {% if user.is_writer%}
+                <li><a href="{% url 'upload' user.id %}">상품등록</a></li>
+                {% else %}
                 <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+                {% endif %}
                 <li>
                     <a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                     <form style="height: 100px;" id="logout" method="POST" action="{% url 'signout' %}">
@@ -63,49 +66,39 @@
                     </form>
                 </li>
                 {% endif %}
-                <li><a href="{% url 'upload' %}">상품등록</a></li>
             </ul>
         </nav>
     </header>
-
     <div style="margin-top: 4em;">
         <h1 style="text-align: center; font-size : 4em;">지금 찍사로 등록하여 돈을 벌어 보세요</h1>
     </div>
+
     <form action="{% url 'enroll' user.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <!-- Two -->
         <div id="enroll" class="enroll">
-
             <div class="login-clean">
-
                 <div class="form-group" style="height: 85px;">
                     <p>프로필 사진</p>
                     <input type="file" name="profile_image" />
                 </div>
-
-
                 <div class="form-group" style="height: 85px;">
                     <p>촬영 사진</p>
                     <input type="file" name="image" multiple />
                 </div>
-
                 <div class="form-group" style="height: 85px;">
                     <p>장비 목록</p>
                     <input class="form-control" type="text" name="camera" placeholder="가지고 있는 장비 서술" />
                 </div>
-
                 <div class="form-group" style="height: 85px;">
                     <p>장비 사진</p>
                     <input type="file" name="camera_image" />
                 </div>
-
-
                 <div class="form-group" style="height: 85px;">
                     <p>SNS 주소(선택)</p>
                     <input class="form-control" type="url" name="sns_email" placeholder="SNS 주소" />
                 </div>
-
                 <div class="form-group" style="height: 200px;">
                     <p>자기소개</p>
                     <textarea class="form-control" name="introduce" style="height: 150px;"></textarea>
@@ -116,7 +109,6 @@
                     </button>
                 </div>
             </div>
-
         </div>
     </form>
 
