--- a/mypage/templates/favorite.html
+++ b/mypage/templates/favorite.html
@@ -47,20 +47,25 @@
 		<h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
 		<nav id="nav">
 			<ul>
-	            
 				<li><a href="{% url 'list' %}">모든상품</a></li>
-                <li><a href="{% url 'bestphoto' %}" >이달의 사진</a></li>
-                <li><a href="{% url 'recommend' %}">추천여행지</a></li>
-                {% if not user.is_authenticated %}  
-                <li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
-                {% else %}
-                <li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
-                <li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-           
-                {% endif %}
-
-                <li><a href="{% url 'upload' %}">상품등록</a></li>
-                <li><a href="{% url 'list' %}">상품페이지</a></li>
+				<li><a href="{% url 'bestphoto' %}">이달의 사진</a></li>
+				<li><a href="{% url 'recommend' %}">추천여행지</a></li>
+				{% if not user.is_authenticated %}
+				<li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
+				{% else %}
+				<li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+				{% if user.is_writer%}
+				<li><a href="{% url 'upload' user.id %}">상품등록</a></li>
+				{% else %}
+				<li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
+				{% endif %}
+				<li>
+					<a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+					<form style="height: 100px;" id="logout" method="POST" action="{% url 'signout' %}">
+						{% csrf_token %} <input type="hidden" />
+					</form>
+				</li>
+				{% endif %}
 			</ul>
 		</nav>
 	</header>
@@ -84,11 +89,14 @@
 							<ul class="alt">
 								<div><a href="" class="button alt" style="width: 100%;">예약상황</a></div>
 								<div><a href="" class="button alt" style="width: 100%;">구매내역</a></div>
-								<div><a href="{% url 'favorite' %}" class="button alt" style="width: 100%;">관심작가</a></div>
-								<div><a href="{% url 'change_user' %}" class="button alt" style="width: 100%;">개인정보수정</a></div>
-								
-								<div><a href="{% url 'delete' user.id %}" class="button alt" style="width: 100%;"  onclick="return confirm('정말 계정을 삭제하시겠습니까?')">회원탈퇴</a></div>
-	
+								<div><a href="{% url 'favorite' %}" class="button alt" style="width: 100%;">관심작가</a>
+								</div>
+								<div><a href="{% url 'change_user' %}" class="button alt"
+										style="width: 100%;">개인정보수정</a></div>
+
+								<div><a href="{% url 'delete' user.id %}" class="button alt" style="width: 100%;"
+										onclick="return confirm('정말 계정을 삭제하시겠습니까?')">회원탈퇴</a></div>
+
 							</ul>
 						</ul>
 					</section>
@@ -98,7 +106,7 @@
 						<h3>관심작가</h3>
 						<br>
 						<dl>
-							<dd>    
+							<dd>
 								{% for writer in writers %}
 								<div class="card" id="favoritephotograper">
 									<section>
@@ -107,9 +115,10 @@
 										<span style="font-size : 2em; margin-left:1em;">000작가</span>
 									</section>
 								</div>
-							
+
 								<div style="text-align: end;margin-right:30%;">
-									<a class="btn btn-outline-primary" href="{% url 'photographer' writer.id %}" role="button">작가페이지</a>
+									<a class="btn btn-outline-primary" href="{% url 'photographer' writer.id %}"
+										role="button">작가페이지</a>
 									<a class="btn btn-outline-primary" href="#" role="button">좋아요취소</a>
 								</div>
 								{% endfor %}
