--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -59,7 +59,7 @@
 
 	<!-- Header -->
 	<header id="header" class="skel-layers-fixed">
-		<h1 class='logo'><a href={% url 'home' %}>찍사</a></h1>
+		<h1 class='logo'><a href="{% url 'home' %}">찍사</a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="{% url 'list' %}">모든상품</a></li>
@@ -69,10 +69,18 @@
 				<li><a href="{% url 'customer_login' %}">로그인/가입</a></li>
 				{% else %}
 				<li><a href="{% url 'mypage' user.id %}">마이페이지</a></li>
+				{% if user.is_writer%}
+				<li><a href="{% url 'upload' user.id %}">상품등록</a></li>
+				{% else %}
 				<li><a href="{% url 'enroll' user.id %}">작가 등록하기</a></li>
-				<li><a href="{% url 'photographer' writer.id %}">작가페이지</a></li>
 				{% endif %}
-				<li><a href="{% url 'upload' %}">상품등록</a></li>
+				<li>
+					<a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+					<form style="height: 100px;" id="logout" method="POST" action="{% url 'signout' %}">
+						{% csrf_token %} <input type="hidden" />
+					</form>
+				</li>
+				{% endif %}
 			</ul>
 		</nav>
 	</header>
