--- a/mypage/templates/mypage.html
+++ b/mypage/templates/mypage.html
@@ -88,7 +88,8 @@
 
 
 						<ul class="alt">
-							<div><a href="" class="button alt" style="width: 100%;">예약상황</a></div>
+							<div><a href="{% url 'mypage' user.id%}" class="button alt" style="width: 100%;">예약상황</a>
+							</div>
 							<div><a href="{% url 'history' %}" class="button alt" style="width: 100%;">구매내역</a></div>
 							<div><a href="{% url 'favorite' %}" class="button alt" style="width: 100%;">관심작가</a></div>
 							<div><a href="{% url 'change_user' %}" class="button alt" style="width: 100%;">개인정보수정</a>
@@ -103,12 +104,54 @@
 				</div>
 				<div class="8u">
 					<section>
-						<div style="border: medium solid #000000;">
-							제목
-						</div>
+						<h3>예약상황</h3>
 						<br>
-						\<div style="border: medium solid #000000; height: 15em;">
-							내용
+						<div>
+							<div class="card-group">
+								<div class="card">
+									<img id="mycard" src="{% static 'images/pic01.jpg' %}" class="card-img-top"
+										alt="...">
+									<div class="card-body">
+										<h5 class="card-title">상품타이틀</h5>
+										<p class="card-text">상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약
+										</p>
+									</div>
+									<div class="card-footer">
+										<div class="d-flex justify-content-between">
+											<small class="text-muted">예약대기</small>
+											<a class="btn btn-outline-danger" id="cancle" href="#"
+												role="button"><small>취소</small></a>
+										</div>
+									</div>
+								</div>
+								<div class="card">
+									<img id="mycard" src="{% static 'images/pic02.jpg' %}" class="card-img-top"
+										alt="...">
+									<div class="card-body">
+										<h5 class="card-title">상품타이틀</h5>
+										<p class="card-text">상품요약상품요약상품요약상품요약상품요약</p>
+									</div>
+									<div class="card-footer">
+										<small class="text-muted">예약확정</small>
+									</div>
+								</div>
+								<div class="card">
+									<img id="mycard" src="{% static 'images/pic03.jpg' %}" class="card-img-top"
+										alt="...">
+									<div class="card-body">
+										<h5 class="card-title">상품타이틀</h5>
+										<p class="card-text">상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약상품요약</p>
+									</div>
+									<div class="card-footer">
+										<div class="d-flex justify-content-between">
+											<small class="text-muted">예약대기</small>
+											<a class="btn btn-outline-danger" id="cancle" href="#"
+												role="button"><small>취소</small></a>
+										</div>
+									</div>
+								</div>
+							</div>
+
 						</div>
 					</section>
 				</div>
