--- a/photographer/templates/list.html
+++ b/photographer/templates/list.html
@@ -79,7 +79,8 @@
                     <option value="photographer">작가</option>
                     <option value="hash">해시태그</option>
                 </select>
-                <input type="text" class="form-control" id="email" placeholder="검색어를 입력해주세요" name="email" required="">
+                <input type="text" class="form-control" id="email" placeholder="검색과 필터링 기능은 아직 미완성입니다ㅜ" name="email"
+                    required="">
                 <button type="submit" class="btn btn-default"><a href="{% url 'haystack_search' %}">검색</a></button>
             </form>
 
@@ -105,28 +106,34 @@
 
 
 
-    {% for product in posts %}
+    <div class="goods">
+        <div class="row">
+            {% for product in posts %}
 
-    <div class="col-md-4">
-        <div class="card" style="margin-top:2rem;width: 18rem;">
-            <img src="/media/{{product.image}}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <a href="">
-                    <h5 class="card-title">상품 제목:{{product.title}}</h5>
-                </a>
-                <p class="card-text">
-                    상품요약:{{product.summary}}
-                </p>
+            <div class="col-md-4">
+                <div class="card" style="margin-top:2rem;width: 18rem;">
+                    <img src="/media/{{product.image}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="{% url 'product' %}">
+                            <h5 class="card-title">상품 제목:{{product.title}}</h5>
+                        </a>
+                        <p class="card-text">
+                            상품요약:{{product.summary}}
+                        </p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">작가:{{product.writerid}}</li>
+                        <li class="list-group-item">가격:{{product.option_price}} 원</li>
+                        <!-- <li class="list-group-item">평점및리뷰수</li> -->
+                    </ul>
+
+                </div>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">작가:{{product.writerid}}</li>
-                <li class="list-group-item">가격:{{product.option_price}} 원</li>
-                <!-- <li class="list-group-item">평점및리뷰수</li> -->
-            </ul>
+
+            {% endfor %}
 
         </div>
     </div>
-    {% endfor %}
     {% if posts.has_previous %}
     <a href="?page=1">First</a>
     <a href="?page={{posts.previous_page_number}}">Previous</a>
@@ -303,7 +310,7 @@
     </div> -->
 
     <div class="map">
-        지도
+        지도 구현 예정
     </div>
 
     <!-- Footer -->
@@ -315,7 +322,8 @@
                         <div class="19u">
                             <ul class="alt">
                                 <li><a href="#">주식회사 Bee | 대표 : 공필상 | gofeel8@likelion.org</a></li>
-                                <li><a href="#">주소 : 전라북도 금암5길 17 | 사업자등록번호 : 123-45-6789 | 대표번호 : 010-4923-0847</a>
+                                <li><a href="#">주소 : 전라북도 금암5길 17 | 사업자등록번호 : 123-45-6789 | 대표번호 :
+                                        010-4923-0847</a>
                                 </li>
                                 <li><a href="#">문의 : 카카오톡 플러스 친구 '찍사'</a></li>
                             </ul>
