--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -31,13 +31,13 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-		</script>
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-		</script>
+	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-		</script>
+	</script>
 
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
@@ -46,8 +46,8 @@
 	<script>
 		$(function () {
 			$("#datepicker").datepicker({
-				dateFormat: 'yymmdd'
-			}
+					dateFormat: 'yymmdd'
+				}
 
 			);
 		});
@@ -161,7 +161,7 @@
 							</li>
 						</ol>
 						<hr class="major" />
-						<div style="width: 50em; height: 20em; border:medium solid #000000;"> 지도</div>
+						<div style="width: 50em; height: 20em; border:medium solid #000000;"> 지도 구현 예정</div>
 					</section>
 				</div>
 				<div class="4u">
@@ -211,10 +211,9 @@
 			<br>
 			<div id="disqus_thread"></div>
 			<script>
-
 				/**
-				*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-				*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+				 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+				 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 				/*
 				var disqus_config = function () {
 				this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
@@ -222,7 +221,8 @@
 				};
 				*/
 				(function () { // DON'T EDIT BELOW THIS LINE
-					var d = document, s = d.createElement('script');
+					var d = document,
+						s = d.createElement('script');
 					s.src = 'https://jjigsa.disqus.com/embed.js';
 					s.setAttribute('data-timestamp', +new Date());
 					(d.head || d.body).appendChild(s);
